tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_enum_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<T> =
  Nil()
  Cons({current: T, next: List<T= T>})

let bomb =
  \Nil() => true
  \Cons({current = true, next = _}) => true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_2.kk:6:3
  │
6 │ ╭   \Nil() => true
7 │ │   \Cons({current = true, next = _}) => true
  │ ╰───────────────────────────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      \Cons({ current = false, next = _ }) => ...
