tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_enum_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> { Some(T), None }

{
  let isSomeSome = x =>
    switch x {
      case Some(Some(_)) : true
    }
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_3.kk:5:5
  │
5 │     switch x {
  │     ^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      case Some(None):
      case None:
