tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_null_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let bomb =
  | null => true
  | null => false

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_null_1.kk:3:5
  │
3 │   | null => false
  │     ^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
