tests/snapshots/test_runner__tests__compiler__typecheck__constrained_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Grade = #a | #b | #c
type Boolean = #true | #false

let (a : Boolean) not : Boolean =
  {
  | #true -> #false
  | #false -> #true
  } (a)

let<T> (left : T) `!=` (right : T) : Boolean
  | [ equals : T -> T -> Boolean ]
  = left equals (right) not

entry
  #a `!=` (#a) print
// Error, missing [ equals : Grade -> Grade -> Boolean ]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/constrained_type_1.kk:15:3
   │
15 │   #a `!=` (#a) print
   │   ^^^^^^^ Unsatisfied Constraint
   │
   = The following variable is required but not found:

     equals: (
       Grade
     ) =>
       (
         Grade
       ) =>
         Boolean
