tests/snapshots/test_runner__tests__compiler__typecheck__constrained_type_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Boolean = #true | #false
let (a : String) `not equals` (b : String) : Boolean
  | [ equals : T -> T -> Boolean ]
 //            ^ Error: Unknown type variable
  = #true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/constrained_type_2.kk:3:16
  │
3 │   | [ equals : T -> T -> Boolean ]
  │                ^ Unknown type symbol
  │
  = Cannot find this type symbol in the current scope
